--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,9 @@
         "ext-spl": "*",
         "ext-xmlreader": "*",
 
-        "simplesamlphp/assert": "^1.4",
+        "simplesamlphp/assert": "~1.6.0",
         "simplesamlphp/composer-xmlprovider-installer": "~1.0.0",
-        "simplesamlphp/xml-common": "^1.18"
+        "simplesamlphp/xml-common": "~1.23.2"
     },
     "require-dev": {
         "simplesamlphp/simplesamlphp-test-framework": "^1.7"
