--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,11 @@
         "ext-pcre": "*",
         "ext-spl": "*",
 
-        "simplesamlphp/assert": "~1.8.0",
-        "simplesamlphp/xml-common": "~1.25.0"
+        "simplesamlphp/assert": "~1.8.1",
+        "simplesamlphp/xml-common": "dev-feature/xsd-types"
     },
     "require-dev": {
-        "simplesamlphp/simplesamlphp-test-framework": "~1.9.1"
+        "simplesamlphp/simplesamlphp-test-framework": "~1.9.2"
     },
     "support": {
         "issues": "https://github.com/simplesamlphp/xml-xsd/issues",
