--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -86,11 +86,11 @@ jobs:
 
       - name: Run unit tests with coverage
         if: ${{ matrix.php-versions == '8.4' }}
-        run: vendor/bin/phpunit
+        run: vendor/bin/phpunit --testsuite=unit
 
       - name: Run unit tests (no coverage)
         if: ${{ matrix.php-versions != '8.4' }}
-        run: vendor/bin/phpunit --no-coverage
+        run: vendor/bin/phpunit --testsuite=unit --no-coverage
 
       - name: Save coverage data
         if: ${{ matrix.php-versions == '8.4' }}
@@ -98,6 +98,10 @@ jobs:
         with:
           name: coverage-data
           path: ${{ github.workspace }}/build
+
+      - name: Run interoperability tests
+        if: ${{ matrix.php-versions != '8.4' }}
+        run: vendor/bin/phpunit --testsuite=interoperability --no-coverage
 
   unit-tests-windows:
     name: "Unit tests, PHP ${{ matrix.php-versions }}, ${{ matrix.operating-system }}"
@@ -148,6 +152,52 @@ jobs:
 
       - name: Run unit tests
         run: vendor/bin/phpunit --no-coverage
+
+  interoperability:
+    name: "Interoperability tests"
+    runs-on: [ubuntu-latest]
+    needs: [unit-tests-linux]
+
+    steps:
+      - name: Setup PHP, with composer and extensions
+        # https://github.com/shivammathur/setup-php
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.4'
+          extensions: ctype, date, dom, filter, libxml, pcre, spl, xml, xmlreader
+          tools: composer
+          ini-values: error_reporting=E_ALL
+          coverage: pcov
+
+      - name: Setup problem matchers for PHP
+        run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+
+      - name: Setup problem matchers for PHPUnit
+        run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
+
+      - name: Set git to use LF
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
+      - uses: actions/checkout@v4
+
+      - name: Get composer cache directory
+        run: echo COMPOSER_CACHE="$(composer config cache-files-dir)" >> "$GITHUB_ENV"
+
+      - name: Cache composer dependencies
+        uses: actions/cache@v4
+        with:
+          path: $COMPOSER_CACHE
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install Composer dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
+
+      - name: Run interoperability tests
+        if: ${{ matrix.php-versions != '8.4' }}
+        run: vendor/bin/phpunit --testsuite=interoperability --no-coverage
 
   quality:
     name: Quality control
